[package]
name = "who"
version = "0.1.0"
edition = "2024"
description = "A simple authentication server"
license = "MIT"
authors = ["Le Duc Minh <minh.leduc.0210@gmail.com>"]

[profile.release]
panic = 'abort'

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenv = "0.15.0"
argonautica = "0.2.0"
thiserror = "2.0.12"
sqlx = {version = "0.8.5", features = ["runtime-tokio", "postgres"]}
chrono = "0.4.41"
tonic = "0.13.1"
jsonwebtoken = "9.2.0"
env_logger = "0.11.8"
log = "0.4"
async-trait = "0.1.88"
